--- a/Source/WebKitLegacy/haiku/Scripts/PreferencesTemplates/WebSettingsPrivateGenerated.cpp.erb
+++ b/Source/WebKitLegacy/haiku/Scripts/PreferencesTemplates/WebSettingsPrivateGenerated.cpp.erb
@@ -16,13 +16,21 @@ void WebSettingsPrivate::defaults()
 {
 	if (settings) {
 <%- for @pref in @preferencesBoundToSetting do -%>
+
 <%- if @pref.condition -%>
 #if <%= @pref.condition %>
 <%- end -%>
+
+<%-     if @pref.type == "String" -%>
+        settings->set<%= @pref.webcoreNameUpper %>(String::fromUTF8(DEFAULT_VALUE_FOR_<%= @pref.name %>));
+<%-     else -%>
         settings->set<%= @pref.webcoreNameUpper %>(DEFAULT_VALUE_FOR_<%= @pref.name %>);
+<%-     end -%>
+
 <%- if @pref.condition -%>
 #endif
 <%- end -%>
+
 <%- end -%>
 
 	}
